--- a/layout.html
+++ b/layout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
+        <meta name="viewport" content="width=device-width">
         <title>Layout interface</title>
         <link rel="stylesheet" href="layout.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,18 +14,18 @@
         <header id="set">
 
             <!--SECTION 1  HEADER  -->
-            <section class="tab1" >
+            <div class="tab1" >
                 <p>Header Logo</p>
                 <ul>
                     <li>header link one</li>
                     <li>header link two</li>
                     <li>header link three</li>
                 </ul>
-            </section>
+            </div>
             <!-- END OF SECTION 1 HEADER -->
 
             <!-- SECTION 2 HEADER -->
-            <section class="tab2" >
+            <div class="tab2" >
                 <div class="herotext">
                     <p>This website is <br> awesome</p>
                     <p>This website has some subtext that goes here under the <br>
@@ -37,14 +37,14 @@
                 <div class="placeholder">
                     <p>this is a placeholder for an image</p>
                 </div>
-            </section>
+            </div>
             <!-- END OF SECTION 2 HEADER -->
         </header>  
 
            <!-- SECTION 2 -->
         <main>
              <!-- SECTION 1 OF MAIN  -->
-            <section class="body1" id="mid">
+            <div class="body1 mid">
                 <p>Some random information.</p>
                 <ul>
                     <li class="box1"></li>
@@ -58,12 +58,12 @@
                     <li>this is some subtext <br>under an illustration<br> or image</li>
                     <li>this is some subtext <br>under an illustration <br> image</li>
                 </ul>
-            </section>
+            </div>
             <!-- END OF SECTION 2 -->
             
             <!--SECTION 3  -->
             <!-- SECTION 2 OF MAIN  -->
-            <section class="body2" id="mid">
+            <div class="body2 mid">
                 <div class="text">
                     <p>This is an inspiring quote, or a testimonial from a<br> customer.
                         Maybe it's just filling space, or maybe<br>
@@ -72,12 +72,12 @@
                     </p>
                 </div>
                 <div class="quote"><p>-Thor, God of Thunder</p></div>
-            </section>
+            </div>
             <!-- END OF SECTION 3 -->
     
             <!-- SECTION 4 -->
             <!--SECTION 3 OF THE MAIN  -->
-            <section class="body3" id="set">
+            <div class="body3 aset">
                 <div class="pop-up">
                     <div class="action">
                         <p>Call to action! It's time!</p>
@@ -85,9 +85,9 @@
                     </div>
                     <div class="button">
                         <button>Sign up</button>
-                    <div>
+                    </div>
                 </div>
-            </section>
+            </div>
             <!-- END OF SECTION 4 -->
         </main>
 
